--- a/pom.xml
+++ b/pom.xml
@@ -151,7 +151,7 @@
 					<configuration>
 						<testFailureIgnore>true</testFailureIgnore>
 						<includes>
-							<include>**/*Runner.java</include>
+							<include>**/*MyRun.java</include>
 						</includes>
 					</configuration>
 				</plugin>
